--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "express-partials": "^0.3.0",
+    "http-proxy-middleware": "^0.19.1",
     "morgan": "^1.9.1",
     "path": "^0.12.7",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "artillery": "^1.6.0-26",
+    "newrelic": "^5.0.0"
   }
 }
